@@ -317,6 +317,29 @@ else
 	AC_MSG_RESULT(no)
 fi
 
+# zipped savegame support
+
+AC_ARG_ENABLE(zip-support, [ --enable-zip-support             Enable zipped savegame support [default yes]],,enable_zip_support=yes)
+
+if test x$enable_zip_support = xyes ; then
+	AC_CHECK_LIB(z,main,enable_zip_support=yes,enable_zip_support=no)
+fi
+
+AC_MSG_CHECKING(for zipped savegame support)
+
+if test x$enable_zip_support = xyes ; then
+	# link statically against zlib if using gcc
+	if test x$GCC = xyes ; then
+		ZLIB_LIBS="-Wl,-Bstatic -lz -Wl,-Bdynamic"
+	else
+		ZLIB_LIBS="-lz"
+	fi
+	AC_DEFINE(HAVE_ZIP_SUPPORT)
+	AC_MSG_RESULT(yes)
+else
+	AC_MSG_RESULT(no)
+fi
+
 # ---------------------------------------------------------------------
 # support for Exult Studio
 # ---------------------------------------------------------------------
@@ -638,6 +661,7 @@ AC_SUBST(EXULT_DATADIR)
 AC_SUBST(SYSLIBS)
 AC_SUBST(ICON_FILE)
 AC_SUBST(DEBUG_FLAGS)
+AC_SUBST(ZLIB_LIBS)
 
 AC_OUTPUT([
 exult.spec
@@ -647,6 +671,7 @@ audio/Makefile
 audio/midi_drivers/Makefile
 conf/Makefile
 files/Makefile
+files/zip/Makefile
 gumps/Makefile
 pathfinder/Makefile
 flic/Makefile
